more test coverage