@@ -1,8 +1,10 @@
 package io.micronaut.http.server.exceptions;
 
 import io.micronaut.http.HttpStatus;
+import io.micronaut.http.MediaType;
 import org.junit.jupiter.api.Test;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -10,7 +12,10 @@ class NotAcceptableExceptionTest {
 
     @Test
     void statusIsNotAcceptable() {
-        NotAcceptableException ex = new NotAcceptableException(Collections.emptyList(), Collections.emptyList());
+        NotAcceptableException ex = new NotAcceptableException(List.of(MediaType.TEXT_HTML_TYPE), List.of(MediaType.APPLICATION_JSON_TYPE));
         assertEquals(HttpStatus.NOT_ACCEPTABLE, ex.getStatus());
+        assertEquals("Specified Accept Types [text/html] not supported. Supported types: [application/json]", ex.getMessage());
+        assertEquals(List.of(MediaType.TEXT_HTML_TYPE), ex.getAcceptedTypes());
+        assertEquals(List.of(MediaType.APPLICATION_JSON_TYPE), ex.getProduceableContentTypes());
     }
 }
